<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroung"
    tools:context=".FinishActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/idLayouth1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/txt_v_titles1"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/dgid_logo_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titre_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:gravity="center"
            android:text="Quittance"
            android:textColor="@color/colorWhite"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/menu_bar"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="310dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/menu_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </android.support.constraint.ConstraintLayout>




    <android.support.constraint.ConstraintLayout
        android:id="@+id/idLayou3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        >


        <ImageView


            android:id="@+id/img_finish"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:contentDescription="@string/img_success"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/succes"
            app:layout_constraintBottom_toTopOf="@+id/btn_print"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />




        <Button

            android:id="@+id/btn_print"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:text="@string/imprimer_une_seule"
            android:textSize="20dp"
            android:background="@drawable/btn_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_finish" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
