<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_achat"
    tools:context=".ValidationAchatActivity">

    <LinearLayout
        android:id="@+id/baniere"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@drawable/baniere"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/logo_dgid"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:src="@drawable/dgid_logo_blanc"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <ImageView
            android:id="@+id/menu_bar"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:src="@drawable/menu_simple"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="@id/logo_dgid"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/trait_1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/trait_jaune"
        app:layout_constraintTop_toBottomOf="@id/baniere"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/txt_timbre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Achat de quittance passport"
        android:textColor="@color/colorWhite"
        android:textStyle="normal"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/trait_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <ImageView
        android:id="@+id/trait_2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/trait_jaune"
        app:layout_constraintTop_toBottomOf="@id/txt_timbre"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/idLayouthClient"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/textview_border"
        android:padding="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/trait_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/txt_title_montant_global"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="20dp"
            android:ems="20"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:text="@string/quittance_fe_tittre_montant_global"
            android:textStyle="bold"
            android:textSize="25dp"
            android:fontFamily="sans-serif-light"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/txt_montant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="20dp"
            android:ems="20"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:text="Montant global :"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_montant_global"/>

        <TextView
            android:id="@+id/txt_montant_global"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_tf_montant_height"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="3dp"
            android:ems="20"
            android:gravity="center"
            android:text="@string/fe_montant_global"
            android:textColor="#96773e"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_montant" />

        <Button
            android:id="@+id/btn_achat_fe_valider"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/timbre_fe_valider"
            android:textStyle="bold"
            android:background="@drawable/btn_valider"
            android:textColor="@color/colorWhite"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_montant_global"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
